<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/baseline_home_24"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/baseline_import_contacts_24"
            android:title="@string/menu_contracts" />
        <item
            android:id="@+id/nav_contract_creation"
            android:icon="@drawable/baseline_mode_24"
            android:title="@string/menu_contract_creation" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/baseline_settings_24"
            android:title="@string/menu_settings" />
        <item
            android:id="@+id/nav_chain_params"
            android:icon="@drawable/baseline_settings_24"
            android:title="@string/menu_chain_params" />
    </group>
</menu>